Cumulative Layout Shift fix

--- a/wp-content/themes/dgwltd/src/scss/site/_header.scss
+++ b/wp-content/themes/dgwltd/src/scss/site/_header.scss
@@ -76,7 +76,6 @@ $nav-height: 64px;
     padding: 0;
     display: flex;
     flex: 1;
-    flex-wrap: wrap;
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
